# pwdb

./: CMakeLists.txt  README.md  meson.build  meson_options.txt
.template/: header-cc-gpl3  header-cc-lgpl3
cmake/: FindGpgme.cmake  FindReadline.cmake
include/pwdb/: CMakeLists.txt  cl_options.h  config.h.in  db.h  db_utils.h  meson.build  pb_gpg.h  pb_json.h  pwdb.proto  pwdb_cmd_interp.h  util.h
lib/: CMakeLists.txt  meson.build
lib/cmd_interp/: CMakeLists.txt  cmd_interp.cc  cmd_interp.h  cmd_interp_test.cc  meson.build
lib/gpgh/: CMakeLists.txt  gen_test_key.cc  gpg_helper.cc  gpg_helper.h  gpg_test.cc  meson.build
src/: CMakeLists.txt  cl_options.cc  db.cc  db_utils.cc  meson.build  pwdb-main.cc  pwdb_cmd_interp.cc  util.cc
test/: CMakeLists.txt  db_json_test.cc  db_test.cc  meson.build
